--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <button onclick="cliqueiNoBotao()">
         <img class="lupa" src="https://www.svgrepo.com/show/488200/find.svg">
         </button>
-        <div>  class="caixa-media">
+        <div class="caixa-media">
 
             <h2 class="cidade">Tempo em Rio de Janeiro</h2>
             <p class="temp">28°C</p>
