--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </button>
         <div class="caixa-media">
 
-            <h2 class="cidade">Tempo em Rio de Janeiro</h2>
+            <h2 class="cidade">Tempo em Rio De Janeiro</h2>
             <p class="temp">28°C</p>
         </div>
             <div class="caixa-menor">
